Force start quiz
